force-app/main/default/objects/AuthorizeNet_Transaction__c/AuthorizeNet_Transaction__c.object-meta.xml
<CustomObject>
    <label>AuthorizeNet Transaction</label>
    <nameField>
        <displayFormat>AT-{0000}</displayFormat>
        <label>AuthorizeNet Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AuthorizeNet Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>