force-app/main/default/objects/AuthorizeNet_Transaction__c/fields/AuthAmount__c.field-meta.xml
<CustomField>
    <fullName>AuthAmount__c</fullName>
    <label>Auth Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>