force-app/main/default/objects/AuthorizeNet_Transaction__c/fields/AuthCode__c.field-meta.xml
<CustomField>
    <fullName>AuthCode__c</fullName>
    <label>Auth Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>