force-app/main/default/objects/AuthorizeNet_Transaction__c/fields/AvsResponse__c.field-meta.xml
<CustomField>
    <fullName>AvsResponse__c</fullName>
    <label>Avs Response</label>
    <length>5</length>
    <type>Text</type>
</CustomField>