force-app/main/default/objects/AuthorizeNet_Transaction__c/fields/EntityName__c.field-meta.xml
<CustomField>
    <fullName>EntityName__c</fullName>
    <label>Entity Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>