force-app/main/default/objects/AuthorizeNet_Transaction__c/fields/InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNumber__c</fullName>
    <label>Invoice Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>