force-app/main/default/objects/AuthorizeNet_Transaction__c/fields/NotificationId__c.field-meta.xml
<CustomField>
    <fullName>NotificationId__c</fullName>
    <externalId>true</externalId>
    <label>Notification Id</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>