force-app/main/default/objects/AuthorizeNet_Transaction__c/fields/ProcessingError__c.field-meta.xml
<CustomField>
    <fullName>ProcessingError__c</fullName>
    <label>Processing Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>