force-app/main/default/objects/AuthorizeNet_Transaction__c/fields/SignatureValid__c.field-meta.xml
<CustomField>
    <fullName>SignatureValid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signature Valid</label>
    <type>Checkbox</type>
</CustomField>