force-app/main/default/objects/AuthorizeNet_Transaction__c/fields/SourceIp__c.field-meta.xml
<CustomField>
    <fullName>SourceIp__c</fullName>
    <label>Source IP</label>
    <length>45</length>
    <type>Text</type>
</CustomField>