force-app/main/default/objects/AuthorizeNet_Transaction__c/fields/TransactionId__c.field-meta.xml
<CustomField>
    <fullName>TransactionId__c</fullName>
    <label>Transaction Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>