force-app/main/default/objects/AuthorizeNet_Transaction__c/fields/WebhookId__c.field-meta.xml
<CustomField>
    <fullName>WebhookId__c</fullName>
    <label>Webhook Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>